# mass

server/: ;w  Cargo.toml  Dockerfile  Dockerfile.dev  compose.yml
server/data/: dump.rdb
server/src/: add.rs  components.rs  controller.rs  db.rs  handlers.rs  hello.rs  list.rs  main.rs  processors.rs
server/src/handlers/: index.rs  weight.rs
server/src/processors/: processors.rs  weight.rs  weight_processor.rs
server/templates/: add.html  hello.html  index.html  list.html
server/templates/components/: button.html
