[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde_json", "with-axum", "serde-json"] }
askama_axum = "0.3.0"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
redis = "0.23.3"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing"] }
